reconfigured audio volume setting; added custom color code settings for text and shadow colors [added Color get and set function]; fixed !pause command to correctly check if set text is number; added cooldown to custom commands; fixed overlapping sounds where sound is longer than gif show duration [added soundfadeout function];

--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+:root {
+  --text: #f6aca2;
+  --shadow-part1: #f49b90;
+  --shadow-part2: #f28b7d;
+  --shadow-part3: #f07a6a;
+  --shadow-part4: #ee6352;
+}
+
 body {
   font-family: canada-type-gibson, sans-serif;
   font-size: .5rem;
@@ -32,15 +40,15 @@ img {
 }
 
 .text-shadows {
-  text-shadow: 3px 3px 0 #f49b90, 6px 6px 0 #f28b7d,
-    9px 9px #f07a6a, 12px 12px 0 #f07a6a;
+  text-shadow: 3px 3px 0 var(--shadow-part1), 6px 6px 0 var(--shadow-part2),
+    9px 9px var(--shadow-part3), 12px 12px 0 var(--shadow-part3);
   font-family: bungee, sans-serif;
   font-size: calc(.25rem + 5vw);
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
   margin: 0;
-  color: #f6aca2;
+  color: var(--text);
   animation: shadows 1.5s ease-in infinite, move 1.5s ease-in infinite;
   letter-spacing: 0.4rem;
 }
@@ -83,41 +91,41 @@ img {
     text-shadow: none;
   }
   10% {
-    text-shadow: 3px 3px 0 #f49b90;
+    text-shadow: 3px 3px 0 var(--shadow-part1);
   }
   20% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2);
   }
   30% {
-    text-shadow: 3px 3px 0 #f28b7d,
-      6px 6px 0 #f28b7d, 9px 9px #f07a6a;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2), 9px 9px var(--shadow-part3);
   }
   40% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d, 9px 9px #f07a6a,
-      12px 12px 0 #ee6352;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2), 9px 9px var(--shadow-part3),
+      12px 12px 0 var(--shadow-part4);
   }
   50% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d, 9px 9px #f07a6a,
-      12px 12px 0 #ee6352;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2), 9px 9px var(--shadow-part3),
+      12px 12px 0 var(--shadow-part4);
   }
   60% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d, 9px 9px #f07a6a,
-      12px 12px 0 #ee6352;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2), 9px 9px var(--shadow-part3),
+      12px 12px 0 var(--shadow-part4);
   }
   70% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d, 9px 9px #f07a6a;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2), 9px 9px var(--shadow-part3);
   }
   80% {
-    text-shadow: 3px 3px 0 #f49b90,
-      6px 6px 0 #f28b7d;
+    text-shadow: 3px 3px 0 var(--shadow-part1),
+      6px 6px 0 var(--shadow-part2);
   }
   90% {
-    text-shadow: 3px 3px 0 #f49b90;
+    text-shadow: 3px 3px 0 var(--shadow-part1);
   }
   100% {
     text-shadow: none;
